- About You page developing process

--- a/expertise.html
+++ b/expertise.html
@@ -56,7 +56,7 @@
         >
           <a
             href="/"
-            class="flex items-center font-outfit font-bold text-3xl cursor-none"
+            class="flex items-center text-3xl font-bold font-outfit cursor-none"
           >
             <h1 class="text-[#00B0FF]">
               Gambit<span class="text-white">Rojo</span>
@@ -89,34 +89,34 @@
             id="navbar-default"
           >
             <ul
-              class="font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg md:flex-row md:space-x-8 md:mt-0 md:border-0 uppercase tracking-widest text-xl"
+              class="flex flex-col p-4 mt-4 text-xl font-medium tracking-widest uppercase border border-gray-100 rounded-lg md:p-0 md:flex-row md:space-x-8 md:mt-0 md:border-0"
             >
               <li>
                 <a
-                  href="#"
-                  class="block py-2 pl-3 pr-4 text-white bg-blue-700 rounded md:bg-transparent md:p-0 font-normal cursor-none"
+                  href="index.html"
+                  class="block py-2 pl-3 pr-4 font-normal text-white bg-blue-700 rounded md:bg-transparent md:p-0 cursor-none"
                   aria-current="page"
                   >Home</a
                 >
               </li>
               <li>
                 <a
-                  href="#"
-                  class="block py-2 pl-3 pr-4 text-white rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:p-0 font-normal cursor-none"
+                  href="expertise.html"
+                  class="block py-2 pl-3 pr-4 font-normal text-white rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:p-0 cursor-none"
                   >Expertise</a
                 >
               </li>
               <li>
                 <a
-                  href="#"
-                  class="block py-2 pl-3 pr-4 text-white rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:p-0 font-normal cursor-none"
+                  href="insight.html"
+                  class="block py-2 pl-3 pr-4 font-normal text-white rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:p-0 cursor-none"
                   >Insight</a
                 >
               </li>
               <li>
                 <a
-                  href="#"
-                  class="block py-2 pl-3 pr-4 text-white rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:p-0 font-normal cursor-none"
+                  href="about-you.html"
+                  class="block py-2 pl-3 pr-4 font-normal text-white rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:p-0 cursor-none"
                   >About You</a
                 >
               </li>
@@ -145,7 +145,7 @@
               </h1>
             </div>
             <div
-              class="w-full bg-transparent flex items-center justify-end"
+              class="flex items-center justify-end w-full bg-transparent"
             >
               <img
                 src="./src/assets/images/logo-3d-transparent.png"
@@ -195,13 +195,13 @@
             >
               <button
                 type="button"
-                class="flex items-center justify-between w-full p-5 font-medium text-left bg-transparent relative overflow-hidden py-7 cursor-none"
+                class="relative flex items-center justify-between w-full p-5 overflow-hidden font-medium text-left bg-transparent py-7 cursor-none"
                 data-accordion-target="#accordion-color-body-1"
                 aria-expanded="true"
                 aria-controls="accordion-color-body-1"
               >
                 <div
-                  class="absolute top-0 left-0 w-full h-full bg-neutral-900 bg-opacity-70 z-0"
+                  class="absolute top-0 left-0 z-0 w-full h-full bg-neutral-900 bg-opacity-70"
                 ></div>
                 <div
                   class="absolute w-full h-full left-0 top-0 z-[-1] bg-[url('https://images.unsplash.com/photo-1457305237443-44c3d5a30b89?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1474&q=80')] bg-cover bg-center"
@@ -241,11 +241,11 @@
                 </h3>
                 <div class="flex flex-col gap-[50px]">
                   <div
-                    class="w-full grid grid-cols-3 gap-8 items-start"
+                    class="grid items-start w-full grid-cols-3 gap-8"
                   >
-                    <div class="w-full flex flex-col pt-10 gap-3">
+                    <div class="flex flex-col w-full gap-3 pt-10">
                       <h3
-                        class="text-white font-outfit font-medium text-4xl"
+                        class="text-4xl font-medium text-white font-outfit"
                       >
                         Andaka Rantara Consultindo
                       </h3>
@@ -257,7 +257,7 @@
                       </p>
                     </div>
                     <div
-                      class="w-full col-span-2 relative group/item"
+                      class="relative w-full col-span-2 group/item"
                     >
                       <div
                         class="absolute w-full h-full top-0 left-0 bg-[#005982] opacity-50 group-hover/item:opacity-0 transition duration-300"
@@ -273,10 +273,10 @@
                     </div>
                   </div>
                   <div
-                    class="w-full grid grid-cols-3 gap-8 items-start"
+                    class="grid items-start w-full grid-cols-3 gap-8"
                   >
                     <div
-                      class="w-full col-span-2 relative group/item"
+                      class="relative w-full col-span-2 group/item"
                     >
                       <div
                         class="absolute w-full h-full top-0 left-0 bg-[#005982] opacity-50 group-hover/item:opacity-0 transition duration-300"
@@ -290,9 +290,9 @@
                         class="w-full"
                       />
                     </div>
-                    <div class="w-full flex flex-col pt-10 gap-3">
+                    <div class="flex flex-col w-full gap-3 pt-10">
                       <h3
-                        class="text-white font-outfit font-medium text-4xl"
+                        class="text-4xl font-medium text-white font-outfit"
                       >
                         Arielle Mitra Consulting
                       </h3>
@@ -313,13 +313,13 @@
             >
               <button
                 type="button"
-                class="flex items-center justify-between w-full p-5 font-medium text-left bg-transparent relative overflow-hidden py-7 cursor-none"
+                class="relative flex items-center justify-between w-full p-5 overflow-hidden font-medium text-left bg-transparent py-7 cursor-none"
                 data-accordion-target="#accordion-color-body-2"
                 aria-expanded="true"
                 aria-controls="accordion-color-body-2"
               >
                 <div
-                  class="absolute top-0 left-0 w-full h-full bg-neutral-900 bg-opacity-70 z-0"
+                  class="absolute top-0 left-0 z-0 w-full h-full bg-neutral-900 bg-opacity-70"
                 ></div>
                 <div
                   class="absolute w-full h-full left-0 top-0 z-[-1] bg-[url('https://images.unsplash.com/photo-1533750349088-cd871a92f312?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80')] bg-cover bg-center"
@@ -359,11 +359,11 @@
                 </h3>
                 <div class="flex flex-col gap-[50px]">
                   <div
-                    class="w-full grid grid-cols-3 gap-8 items-start"
+                    class="grid items-start w-full grid-cols-3 gap-8"
                   >
-                    <div class="w-full flex flex-col pt-10 gap-3">
+                    <div class="flex flex-col w-full gap-3 pt-10">
                       <h3
-                        class="text-white font-outfit font-medium text-4xl"
+                        class="text-4xl font-medium text-white font-outfit"
                       >
                         Andaka Rantara Consultindo
                       </h3>
@@ -375,7 +375,7 @@
                       </p>
                     </div>
                     <div
-                      class="w-full col-span-2 relative group/item"
+                      class="relative w-full col-span-2 group/item"
                     >
                       <div
                         class="absolute w-full h-full top-0 left-0 bg-[#005982] opacity-50 group-hover/item:opacity-0 transition duration-300"
@@ -391,10 +391,10 @@
                     </div>
                   </div>
                   <div
-                    class="w-full grid grid-cols-3 gap-8 items-start"
+                    class="grid items-start w-full grid-cols-3 gap-8"
                   >
                     <div
-                      class="w-full col-span-2 relative group/item"
+                      class="relative w-full col-span-2 group/item"
                     >
                       <div
                         class="absolute w-full h-full top-0 left-0 bg-[#005982] opacity-50 group-hover/item:opacity-0 transition duration-300"
@@ -408,9 +408,9 @@
                         class="w-full"
                       />
                     </div>
-                    <div class="w-full flex flex-col pt-10 gap-3">
+                    <div class="flex flex-col w-full gap-3 pt-10">
                       <h3
-                        class="text-white font-outfit font-medium text-4xl"
+                        class="text-4xl font-medium text-white font-outfit"
                       >
                         Arielle Mitra Consulting
                       </h3>
@@ -431,13 +431,13 @@
             >
               <button
                 type="button"
-                class="flex items-center justify-between w-full p-5 font-medium text-left bg-transparent relative overflow-hidden py-7 cursor-none"
+                class="relative flex items-center justify-between w-full p-5 overflow-hidden font-medium text-left bg-transparent py-7 cursor-none"
                 data-accordion-target="#accordion-color-body-3"
                 aria-expanded="true"
                 aria-controls="accordion-color-body-3"
               >
                 <div
-                  class="absolute top-0 left-0 w-full h-full bg-neutral-900 bg-opacity-70 z-0"
+                  class="absolute top-0 left-0 z-0 w-full h-full bg-neutral-900 bg-opacity-70"
                 ></div>
                 <div
                   class="absolute w-full h-full left-0 top-0 z-[-1] bg-[url('https://images.unsplash.com/photo-1579869847557-1f67382cc158?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1634&q=80')] bg-cover bg-center"
@@ -477,11 +477,11 @@
                 </h3>
                 <div class="flex flex-col gap-[50px]">
                   <div
-                    class="w-full grid grid-cols-3 gap-8 items-start"
+                    class="grid items-start w-full grid-cols-3 gap-8"
                   >
-                    <div class="w-full flex flex-col pt-10 gap-3">
+                    <div class="flex flex-col w-full gap-3 pt-10">
                       <h3
-                        class="text-white font-outfit font-medium text-4xl"
+                        class="text-4xl font-medium text-white font-outfit"
                       >
                         Andaka Rantara Consultindo
                       </h3>
@@ -493,7 +493,7 @@
                       </p>
                     </div>
                     <div
-                      class="w-full col-span-2 relative group/item"
+                      class="relative w-full col-span-2 group/item"
                     >
                       <div
                         class="absolute w-full h-full top-0 left-0 bg-[#005982] opacity-50 group-hover/item:opacity-0 transition duration-300"
@@ -509,10 +509,10 @@
                     </div>
                   </div>
                   <div
-                    class="w-full grid grid-cols-3 gap-8 items-start"
+                    class="grid items-start w-full grid-cols-3 gap-8"
                   >
                     <div
-                      class="w-full col-span-2 relative group/item"
+                      class="relative w-full col-span-2 group/item"
                     >
                       <div
                         class="absolute w-full h-full top-0 left-0 bg-[#005982] opacity-50 group-hover/item:opacity-0 transition duration-300"
@@ -526,9 +526,9 @@
                         class="w-full"
                       />
                     </div>
-                    <div class="w-full flex flex-col pt-10 gap-3">
+                    <div class="flex flex-col w-full gap-3 pt-10">
                       <h3
-                        class="text-white font-outfit font-medium text-4xl"
+                        class="text-4xl font-medium text-white font-outfit"
                       >
                         Arielle Mitra Consulting
                       </h3>
@@ -549,7 +549,7 @@
     </div>
 
     <!-- Start a project -->
-    <section class="w-full text-center mb-40">
+    <section class="w-full mb-40 text-center">
       <h1
         class="font-outfit font-bold text-6xl xl:text-[96px] text-transparent bg-clip-text bg-gradient-to-b from-[#8CDBFF] via-[#00B0FF] to-[#0027AF] drop-shadow-lg bg-size-200 bg-pos-0 hover:bg-pos-100 transition-all duration-300 leading-normal"
       >
@@ -560,10 +560,10 @@
     <!-- Footer goes here -->
     <footer class="w-full">
       <div
-        class="w-full mx-auto container grid grid-cols-1 xl:grid-cols-2"
+        class="container grid w-full grid-cols-1 mx-auto xl:grid-cols-2"
       >
         <div
-          class="flex flex-col justify-start items-center text-center gap-5 py-20"
+          class="flex flex-col items-center justify-start gap-5 py-20 text-center"
         >
           <h3
             class="font-outfit font-semibold text-3xl text-transparent bg-clip-text bg-gradient-to-r from-[#8CDBFF] to-[#00B0FF]"
@@ -571,25 +571,25 @@
             Contact Us
           </h3>
           <h4
-            class="font-inter font-medium text-lg xl:text-xl text-white"
+            class="text-lg font-medium text-white font-inter xl:text-xl"
           >
             gambitrojo@gmail.com
           </h4>
           <h4
-            class="font-inter font-medium text-lg xl:text-xl text-white"
+            class="text-lg font-medium text-white font-inter xl:text-xl"
           >
             +62 812 3456789
           </h4>
         </div>
         <div
-          class="flex flex-col justify-start items-center text-center gap-5 py-20"
+          class="flex flex-col items-center justify-start gap-5 py-20 text-center"
         >
           <h3
             class="font-outfit font-semibold text-3xl text-transparent bg-clip-text bg-gradient-to-r from-[#8CDBFF] to-[#00B0FF]"
           >
             Our Social Media
           </h3>
-          <div class="flex gap-10 items-center">
+          <div class="flex items-center gap-10">
             <a href="#" class="cursor-none">
               <img
                 src="./src/assets/icons/instagram.svg"
