--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         >
           <a
             href="/"
-            class="flex items-center font-outfit font-bold text-3xl cursor-none"
+            class="flex items-center text-3xl font-bold font-outfit cursor-none"
           >
             <h1 class="text-[#00B0FF]">
               Gambit<span class="text-white">Rojo</span>
@@ -89,34 +89,34 @@
             id="navbar-default"
           >
             <ul
-              class="font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg md:flex-row md:space-x-8 md:mt-0 md:border-0 uppercase tracking-widest text-xl"
+              class="flex flex-col p-4 mt-4 text-xl font-medium tracking-widest uppercase border border-gray-100 rounded-lg md:p-0 md:flex-row md:space-x-8 md:mt-0 md:border-0"
             >
               <li>
                 <a
-                  href="#"
-                  class="block py-2 pl-3 pr-4 text-white bg-blue-700 rounded md:bg-transparent md:p-0 font-normal cursor-none"
+                  href="index.html"
+                  class="block py-2 pl-3 pr-4 font-normal text-white bg-blue-700 rounded md:bg-transparent md:p-0 cursor-none"
                   aria-current="page"
                   >Home</a
                 >
               </li>
               <li>
                 <a
-                  href="#"
-                  class="block py-2 pl-3 pr-4 text-white rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:p-0 font-normal cursor-none"
+                  href="expertise.html"
+                  class="block py-2 pl-3 pr-4 font-normal text-white rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:p-0 cursor-none"
                   >Expertise</a
                 >
               </li>
               <li>
                 <a
-                  href="#"
-                  class="block py-2 pl-3 pr-4 text-white rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:p-0 font-normal cursor-none"
+                  href="insight.html"
+                  class="block py-2 pl-3 pr-4 font-normal text-white rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:p-0 cursor-none"
                   >Insight</a
                 >
               </li>
               <li>
                 <a
-                  href="#"
-                  class="block py-2 pl-3 pr-4 text-white rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:p-0 font-normal cursor-none"
+                  href="about-you.html"
+                  class="block py-2 pl-3 pr-4 font-normal text-white rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:p-0 cursor-none"
                   >About You</a
                 >
               </li>
@@ -152,7 +152,7 @@
           </div>
           <div class="absolute bottom-[30px] overflow-x-visible">
             <div class="relative flex overflow-x-visible">
-              <div class="animate-marquee whitespace-nowrap z-0">
+              <div class="z-0 animate-marquee whitespace-nowrap">
                 <p
                   class="font-inter font-light text-white text-lg xl:text-[2vw]"
                 >
@@ -167,7 +167,7 @@
                 </p>
               </div>
               <div
-                class="absolute top-0 animate-marquee2 whitespace-nowrap z-0"
+                class="absolute top-0 z-0 animate-marquee2 whitespace-nowrap"
               >
                 <p
                   class="font-inter font-light text-white text-lg xl:text-[2vw]"
@@ -195,35 +195,35 @@
       <div
         class="about-first w-full grid m:grid-cols-2 grid-cols-1 gap-[48px]"
       >
-        <div class="w-full flex gap-3 justify-around">
-          <div class="flex flex-col gap-2 items-center">
+        <div class="flex justify-around w-full gap-3">
+          <div class="flex flex-col items-center gap-2">
             <h1
               class="font-outfit font-bold text-5xl xl:text-8xl text-transparent bg-clip-text bg-gradient-radial from-[#00B0FF] to-[#070C0F]"
             >
               50+
             </h1>
             <h3
-              class="font-inter text-white text-center font-light text-xl"
+              class="text-xl font-light text-center text-white font-inter"
             >
               Projects<br />Done
             </h3>
           </div>
-          <div class="flex flex-col gap-2 items-center">
+          <div class="flex flex-col items-center gap-2">
             <h1
               class="font-outfit font-bold text-5xl xl:text-8xl text-transparent bg-clip-text bg-gradient-radial from-[#00B0FF] to-[#070C0F]"
             >
               2020
             </h1>
             <h3
-              class="font-inter text-white text-center font-light text-xl"
+              class="text-xl font-light text-center text-white font-inter"
             >
               Company<br />Start
             </h3>
           </div>
         </div>
-        <div class="w-full flex items-center px-5 md:px-0">
+        <div class="flex items-center w-full px-5 md:px-0">
           <p
-            class="font-inter text-white font-light text-2xl text-center md:text-left"
+            class="text-2xl font-light text-center text-white font-inter md:text-left"
           >
             Lorem ipsum dolor sit amet consectetur. Id risus auctor
             malesuada natoque arcu elementum at nibh hac.
@@ -246,8 +246,8 @@
         <div
           class="absolute w-[250px] h-[250px] xl:w-[300px] 2xl:w-[300px] 2xl:h-[300px] xl:h-[300px] bg-[#00B0FF] z-[-1] top-[350%] sm:top-[250%] right-[0%] -translate-y-[50%] rounded-full blur-[96px] opacity-[0.6]"
         ></div>
-        <div class="px-5 xl:px-60 w-full relative">
-          <div class="w-full pt-12 relative">
+        <div class="relative w-full px-5 xl:px-60">
+          <div class="relative w-full pt-12">
             <h1
               class="uppercase font-outfit font-semibold text-5xl xl:text-7xl text-transparent bg-clip-text bg-gradient-to-r from-[#8CDBFF] via-[#00B0FF] to-[#0027AF] mt-16 mb-0 xl:mb-8 rellax z-[3]"
               data-rellax-speed="2.5"
@@ -263,15 +263,15 @@
               data-rellax-desktop-speed="-3"
             >
               Lorem ipsum
-              <span class="about-unique text-white relative"
+              <span class="relative text-white about-unique"
                 >dolor sit
               </span>
               amet consectetur. Lacinia nulla lectus in
-              <span class="about-unique text-white relative"
+              <span class="relative text-white about-unique"
                 >ornare orci.</span
               >
               Pulvinar ligula tristique pellentesque
-              <span class="about-unique text-white relative"
+              <span class="relative text-white about-unique"
                 >fermentum au.</span
               >
             </p>
@@ -308,7 +308,7 @@
               <img
                 src="./src/assets/images/about.png"
                 alt="about"
-                class="w-full h-full object-cover object-center"
+                class="object-cover object-center w-full h-full"
               />
             </div>
           </div>
@@ -327,7 +327,7 @@
               <img
                 src="./src/assets/images/about-2.png"
                 alt="about"
-                class="w-full h-full object-cover object-center"
+                class="object-cover object-center w-full h-full"
               />
             </div>
           </div>
@@ -350,7 +350,7 @@
       >
         <div class="w-full xl:w-[45%] block xl:flex items-center">
           <h1
-            class="font-outfit font-bold text-white text-5xl xl:text-6xl"
+            class="text-5xl font-bold text-white font-outfit xl:text-6xl"
           >
             Longevity
           </h1>
@@ -368,7 +368,7 @@
       >
         <div class="w-full xl:w-[45%] block xl:flex items-center">
           <p
-            class="font-outfit font-bold text-white text-5xl xl:text-6xl"
+            class="text-5xl font-bold text-white font-outfit xl:text-6xl"
           >
             Partnership & Collaboration
           </p>
@@ -386,7 +386,7 @@
       >
         <div class="w-full xl:w-[45%] block xl:flex items-center">
           <h1
-            class="font-outfit font-bold text-white text-5xl xl:text-6xl"
+            class="text-5xl font-bold text-white font-outfit xl:text-6xl"
           >
             Longevity
           </h1>
@@ -402,7 +402,7 @@
     </div>
 
     <!-- Start a project -->
-    <section class="w-full text-center mb-40">
+    <section class="w-full mb-40 text-center">
       <h1
         class="font-outfit font-bold text-6xl xl:text-[96px] text-transparent bg-clip-text bg-gradient-to-b from-[#8CDBFF] via-[#00B0FF] to-[#0027AF] drop-shadow-lg bg-size-200 bg-pos-0 hover:bg-pos-100 transition-all duration-300 leading-normal"
       >
@@ -413,10 +413,10 @@
     <!-- Footer goes here -->
     <footer class="w-full">
       <div
-        class="w-full mx-auto container grid grid-cols-1 xl:grid-cols-2"
+        class="container grid w-full grid-cols-1 mx-auto xl:grid-cols-2"
       >
         <div
-          class="flex flex-col justify-start items-center text-center gap-5 py-20"
+          class="flex flex-col items-center justify-start gap-5 py-20 text-center"
         >
           <h3
             class="font-outfit font-semibold text-3xl text-transparent bg-clip-text bg-gradient-to-r from-[#8CDBFF] to-[#00B0FF]"
@@ -424,25 +424,25 @@
             Contact Us
           </h3>
           <h4
-            class="font-inter font-medium text-lg xl:text-xl text-white"
+            class="text-lg font-medium text-white font-inter xl:text-xl"
           >
             gambitrojo@gmail.com
           </h4>
           <h4
-            class="font-inter font-medium text-lg xl:text-xl text-white"
+            class="text-lg font-medium text-white font-inter xl:text-xl"
           >
             +62 812 3456789
           </h4>
         </div>
         <div
-          class="flex flex-col justify-start items-center text-center gap-5 py-20"
+          class="flex flex-col items-center justify-start gap-5 py-20 text-center"
         >
           <h3
             class="font-outfit font-semibold text-3xl text-transparent bg-clip-text bg-gradient-to-r from-[#8CDBFF] to-[#00B0FF]"
           >
             Our Social Media
           </h3>
-          <div class="flex gap-10 items-center">
+          <div class="flex items-center gap-10">
             <a href="#" class="cursor-none">
               <img
                 src="./src/assets/icons/instagram.svg"
