(+) Live chat tawk.to

--- a/expertise.html
+++ b/expertise.html
@@ -65,7 +65,7 @@
           <button
             data-collapse-toggle="navbar-default"
             type="button"
-            class="inline-flex items-center p-2 ml-3 text-sm text-gray-500 md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200"
+            class="inline-flex items-center p-2 ml-3 text-sm text-gray-500 md:hidden"
             aria-controls="navbar-default"
             aria-expanded="false"
           >
@@ -89,7 +89,7 @@
             id="navbar-default"
           >
             <ul
-              class="flex flex-col mt-4 text-xl font-medium tracking-widest uppercase md:p-0 bg-slate-600 md:bg-transparent md:flex-row md:space-x-8 md:mt-0 md:border-0"
+              class="flex flex-col mt-4 text-xl font-medium tracking-widest uppercase md:p-0 bg-slate-800 md:bg-transparent md:flex-row md:space-x-8 md:mt-0 md:border-0"
             >
               <li>
                 <a
@@ -102,21 +102,21 @@
               <li>
                 <a
                   href="/expertise.html"
-                  class="block py-2 pl-3 pr-4 text-white hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:p-0 font-normal cursor-none bg-[#00B0FF] md:bg-transparent"
+                  class="block py-2 pl-3 pr-4 text-white md:border-0 md:p-0 font-normal cursor-none bg-[#00B0FF] md:bg-transparent active"
                   >Expertise</a
                 >
               </li>
               <li>
                 <a
-                  href="insight.html"
-                  class="block py-2 pl-3 pr-4 font-normal text-white rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:p-0 cursor-none"
+                  href="/insight.html"
+                  class="block py-2 pl-3 pr-4 font-normal text-white rounded md:border-0 md:p-0 cursor-none"
                   >Insight</a
                 >
               </li>
               <li>
                 <a
-                  href="about-you.html"
-                  class="block py-2 pl-3 pr-4 font-normal text-white rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:p-0 cursor-none"
+                  href="/about-you.html"
+                  class="block py-2 pl-3 pr-4 font-normal text-white rounded md:border-0 md:p-0 cursor-none"
                   >About You</a
                 >
               </li>
@@ -133,7 +133,7 @@
           class="w-full min-h-[100vh] text-center relative flex flex-col justify-center overflow-x-hidden gap-20"
         >
           <div
-            class="w-full mx-auto lg:max-w-[1150px] 2xl:max-w-[1366px] relative grid grid-cols-1 xl:grid-cols-3 text-center items-center px-5 xl:px-0 hero-item"
+            class="w-full mx-auto lg:max-w-[1150px] 2xl:max-w-[1366px] relative grid grid-cols-1 xl:grid-cols-3 text-center items-center px-5 2xl:px-0 hero-item"
           >
             <div class="col-span-2">
               <h1
@@ -506,7 +506,7 @@
     <!-- Footer goes here -->
     <footer class="w-full">
       <div
-        class="container grid w-full grid-cols-1 mx-auto xl:grid-cols-2"
+        class="container grid w-full grid-cols-1 mx-auto sm:grid-cols-2"
       >
         <div
           class="flex flex-col items-center justify-start gap-5 py-20 text-center"
@@ -566,6 +566,23 @@
         </h4>
       </div>
     </footer>
+
+    <!--Start of Tawk.to Script-->
+    <script type="text/javascript">
+      var Tawk_API = Tawk_API || {},
+        Tawk_LoadStart = new Date();
+      (function () {
+        var s1 = document.createElement('script'),
+          s0 = document.getElementsByTagName('script')[0];
+        s1.async = true;
+        s1.src =
+          'https://embed.tawk.to/64abfae494cf5d49dc62a57d/1h4vso42d';
+        s1.charset = 'UTF-8';
+        s1.setAttribute('crossorigin', '*');
+        s0.parentNode.insertBefore(s1, s0);
+      })();
+    </script>
+    <!--End of Tawk.to Script-->
 
     <script src="./src/js/cursor1.js"></script>
     <script src="./src/js/scrollreveal.js"></script>
