--- a/index.html
+++ b/index.html
@@ -50,7 +50,14 @@
         class="absolute w-[200px] h-[200px] xl:w-[300px] 2xl:w-[400px] 2xl:h-[400px] xl:h-[300px] bg-[#00B0FF] z-[-1] top-[50%] left-[65%] -translate-x-[50%] -translate-y-[50%] rounded-full blur-[128px] opacity-[1] animate-pulse2"
       ></div>
       <!-- Navbar goes here -->
-      <nav class="bg-transparent">
+      <div
+        class="backbone h-[80px] xl:h-[76px] absolute w-full bg-transparent"
+        id="backbone"
+      ></div>
+      <nav
+        class="w-full top-0 left-0 z-20 relative transition duration-500 ease-in-out"
+        id="navbar"
+      >
         <div
           class="w-full mx-auto lg:max-w-[1150px] 2xl:max-w-[1366px] flex flex-wrap items-center justify-between py-5 px-5 2xl:px-0"
         >
@@ -89,7 +96,7 @@
             id="navbar-default"
           >
             <ul
-              class="flex flex-col mt-4 text-xl font-medium tracking-widest uppercase md:p-0 md:flex-row bg-slate-600 md:bg-transparent md:space-x-8 md:mt-0 md:border-0"
+              class="flex flex-col mt-4 text-xl font-medium tracking-widest uppercase md:p-0 md:flex-row bg-transparent md:space-x-8 md:mt-0 md:border-0"
             >
               <li>
                 <a
@@ -452,7 +459,7 @@
               <img
                 src="./src/assets/icons/instagram.svg"
                 alt="instagram"
-                class="w-[33px] xl:w-[40px]"
+                class="w-[33px] xl:w-[48px]"
               />
             </a>
             <a href="#" class="cursor-none">
@@ -498,6 +505,7 @@
 
     <script src="./src/js/cursor1.js"></script>
     <script src="./src/js/scrollreveal.js"></script>
+    <script src="./src/js/navbar.js"></script>
     <script src="./node_modules/flowbite/dist/flowbite.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/dixonandmoe/rellax@master/rellax.min.js"></script>
 
